src/test/deca/syntax/valid/print_tout_type.deca
// Description:
//    Programme minimaliste utilisant println et print pour tout type + test affectation d'un entier .
//
// Resultats:
//4
//4.5
//false
// Historique:
//    cree le 06/01/2025

{       
        int x=4;
        print(x);
        print("\n");
        println(4.5);
        println(false);
}